--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "sogonproject",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "components": "^0.1.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
