--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "components": "^0.1.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
+    "react-dropdown-now": "^5.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
