--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "detect-file-type": "^0.2.8",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "formidable": "^1.2.2",
+    "mongoose": "^5.12.3",
+    "uuid": "^8.3.2"
   }
 }
