--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "components": "^0.1.0",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.20.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
