--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.3"
+    "mongoose": "^5.12.3",
+    "multer": "^1.4.2"
   }
 }
