--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,12 +14,15 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "detect-file-type": "^0.2.8",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0"
   }
 }
