--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown-now": "^5.0.0",
     "react-icons": "^4.2.0",
+    "react-multi-select-component": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
