--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dropdown-now": "^5.0.0",
     "react-icons": "^4.2.0",
     "react-multi-select-component": "^4.0.1",
+    "react-onclickoutside": "^6.10.0",
+    "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
