--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-dropdown-now": "^5.0.0",
     "react-icons": "^4.2.0",
     "react-multi-select-component": "^4.0.1",
+    "react-new-window": "^0.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
