--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.914.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -23,6 +24,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0"
+    "multer-gridfs-storage": "^4.2.0",
+    "multer-s3": "^2.9.0"
   }
 }
