--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "detect-file-type": "^0.2.8",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "gridfs-stream": "^1.1.1",
