--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "qs": "^6.10.1"
   }
 }
