--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.20.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-daum-postcode": "^2.0.6",
