--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.2.0",
     "react-multi-select-component": "^4.0.1",
     "react-new-window": "^0.1.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
